--- a/movie-ng/src/index.html
+++ b/movie-ng/src/index.html
@@ -1,13 +1,35 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="zxx">
 <head>
-  <meta charset="utf-8">
+
   <title>MovieNg</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <title>Movie Seat Selection Flat Responsive Widget Template :: w3layouts</title>
+  <!-- Meta-Tags -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta name="keywords" content="Movie Seat Selection a Responsive Web Template, Bootstrap Web Templates, Flat Web Templates, Android Compatible Web Template, Smartphone Compatible Web Template, Free Webdesigns for Nokia, Samsung, LG, Sony Ericsson, Motorola Web Design">
+  <script>
+      addEventListener("load", function () {
+          setTimeout(hideURLbar, 0);
+      }, false);
+
+      function hideURLbar() {
+          window.scrollTo(0, 1);
+      }
+  </script>
+  <!-- //Meta-Tags -->
+  <!-- Index-Page-CSS -->
+  <link rel="stylesheet" href="src/css/style.css" type="text/css" media="all">
+  <!-- //Custom-Stylesheet-Links -->
+  <!--fonts -->
+  <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i" rel="stylesheet">
+  <!-- //fonts -->
+
 </head>
-<body>
+<body onload="onLoaderFunc()">
+
   <app-root></app-root>
-</body>
+</body >
 </html>
