--- a/movie-ng/src/index.html
+++ b/movie-ng/src/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-  <title>MovieNg</title>
+<title>MovieNg</title>
   <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <title>Movie Seat Selection Flat Responsive Widget Template :: w3layouts</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta name="keywords" content="Movie Seat Selection a Responsive Web Template, Bootstrap Web Templates, Flat Web Templates, Android Compatible Web Template, Smartphone Compatible Web Template, Free Webdesigns for Nokia, Samsung, LG, Sony Ericsson, Motorola Web Design">
   <script>
       addEventListener("load", function () {
           setTimeout(hideURLbar, 0);
@@ -13,9 +16,11 @@
       function hideURLbar() {
           window.scrollTo(0, 1);
       }
-  </script>
+</script>
+<link rel="stylesheet" src="styles.css" type="text/css" media="all">
+<link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i" rel="stylesheet">
 </head>
 <body onload="onLoaderFunc()">
-  <app-root></app-root>
-</body >
+<app-root></app-root>
+</body>
 </html>
